<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hilbing.mymovies.activities.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_movie_rating_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/rating"
                    android:textAlignment="center"
                    android:padding="@dimen/movie_title_padding"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_title"/>

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:numStars="5"
                    android:rating="2"
                    android:stepSize="1" />

            <TextView
                android:id="@+id/tv_movie_synopsis_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/synopsis"
                android:textAlignment="center"
                android:padding="@dimen/movie_title_padding"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_title"/>

            <TextView
                android:id="@+id/tv_movie_synopsis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/synopsis"
                android:textAlignment="center"
                android:padding="@dimen/movie_title_padding"
                android:textStyle="italic"
                android:textSize="@dimen/text_size_normal"/>

            <TextView
                android:id="@+id/tv_movie_release_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/release_date"
                android:textAlignment="center"
                android:padding="@dimen/movie_title_padding"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_title"/>

            <TextView
                android:id="@+id/tv_release"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/release_date"
                android:textAlignment="center"
                android:padding="@dimen/movie_title_padding"
                android:textStyle="italic"
                android:textSize="@dimen/text_size_normal"/>

            <TextView
                android:id="@+id/tv_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_title"
                android:text="@string/trailer"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_title"
                android:text="@string/reviews"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical">

            </android.support.v7.widget.RecyclerView>


        </LinearLayout>




    </ScrollView>





</android.support.constraint.ConstraintLayout>